--- a/html-pages/learning-to-cook.html
+++ b/html-pages/learning-to-cook.html
@@ -7,11 +7,12 @@
     <Title> Learning Seafood Cuisine</Title>
 
     <link rel="stylesheet" href="../css-styles/header.css">
+    <link rel="stylesheet" href="../css-styles/homepage.css">
 </head>
 
 <body>
 
-
+<nav>
     <div class="header">
 
 
@@ -25,15 +26,15 @@
         </div>
 
         <div class="HeaderPages" >
-            <a class="header-links" href="Breakfast-Dishes.html">Breakfast Dishes</a>
+            <a class="header-links" href="Seafood-Appetizers.html">Seafood Appetizers</a>
         </div>
 
         <div class="HeaderPages">
-            <a class="header-links" href="Lunch-Dishes.html">Lunch Dishes</a>
+            <a class="header-links" href="Seafood_Entree.html">Seafood Entree</a>
         </div>
 
         <div class="HeaderPages">
-            <a class="header-links" href="Desserts.html">Desserts</a>
+            <a class="header-links" href="Seafood-Sides.html">Seafood sides</a>
             </div>
 
         <div class="HeaderPages">
@@ -46,8 +47,45 @@
             <button class="search-button"> <img class="search-icon" src="../icons/search.jpg"> </button> 
         </div>
     </div>
+</nav>    
 
-    <h1> Home Page </h1>
+    <h1 class="Page-heading"> Learning Seafood Cuisine </h1>
+
+    <div class="HomePage"> 
+        <div class= "welcomeM-box">
+            <p class="Welcome-message"> <strong> Welcome to Learning Seafood Cuisine! Here, you will find a wide variety of delicious seafood recipes that are easy to follow and perfect for any level of cooking experience. Our goal is to help you learn how to cook seafood like a pro, from the comfort of your own home. Here on Learning Seafood Cuisine, we have something for everyone. So, grab your apron and let&apos;s get to it! </strong></p>
+        </div>
+
+        <p Class="Popular-seafood"> Most Popular Seafood Recipes: </p>
+        <div Class="HP-Imagebox">
+            <div class="HP-Imagetext"><Strong><a class="header-links" href="Seafood-Appetizers.html">New England Clam Chowder</a></Strong>
+                 <img class="HomePageIMGs" src="../Recipe Images/New England clam chowder.webp">
+                </div>
+            <div class="HP-Imagetext"><Strong><a class="header-links" href="Seafood-Sides.html">Mexican-Style SHrimp Cocktail</a></Strong>
+                <img class="HomePageIMGs" src="../Recipe Images/Mexican-Style Shrimp Cocktail.webp">
+            </div>
+            <div class="HP-Imagetext"><Strong><a class="header-links" href="Seafood-Appetizers.html">Mussle Vinaigrette</a></Strong>
+                <img class="HomePageIMGs" src="../Recipe Images/Mussle Vinaigrette.webp">
+            </div>
+        </div>
+
+        <div>
+            <p class="start-message"> We provide you with the essentials you need to take your seafood cuisine skills to the next level. Our step-by-step guides make it easy to follow along and learn at your own pace. With our help, you&apos;ll be whipping up delicious seafood dishes in no time. So join us on this culinary journey and click the next page button for great cooking tips from our highly trained chefs!</p>
+
+            <p class="info"> Contact Information
+                <ul>
+                    <li>Email: Info@learningseafoodcuisine.com</li>
+                    <li>Phone: 1 (758) 4565916</li>
+                    <li>PO Box: 40602930 </li>
+                    <li> Social Media: @LearningSeafoodCuisine on Instagram, Twitter, asnd facebook</li>
+                  </ul>
+            </p>
+        </div>
+        
+
+        <button Class="nextpage-Button" > <a class="nextpage-text" href="Cooking-Tips.html"> Next Page</a> </button>
+
+    </div>
 
 </body>
 
