--- a/html-pages/About-Us.html
+++ b/html-pages/About-Us.html
@@ -27,17 +27,17 @@
         </div>
 
         <div class="HeaderPages" >
-            <a class="header-links" href="Breakfast-Dishes.html">Breakfast Dishes</a>
+            <a class="header-links" href="Seafood-Appetizers.html">Seafood Appetizers</a>
         </div>
 
         <div class="HeaderPages">
-            <a class="header-links" href="Lunch-Dishes.html">Lunch Dishes</a>
+            <a class="header-links" href="Seafood_Entree.html">Seafood Entree</a>
         </div>
 
         <div class="HeaderPages">
-            <a class="header-links" href="Desserts.html">Desserts</a>
+            <a class="header-links" href="Seafood-Sides.html">Seafood sides</a>
             </div>
-
+            
         <div class="HeaderPages">
                 <a class="header-links" href="About-Us.html">About Us</a>
                 </div>
@@ -49,7 +49,11 @@
         </div>
     </div>
 
-    <h1> About Us </h1>
+    <h1> <h1 class="Page-heading"> About Us </h1> </h1>
+
+    <div>
+        <button Class="previouspage-Button" > <a class="nextpage-text" href="Seafood-Sides.html"> Previous Page</a> </button>
+    </div>
 
 </body>
 
