--- a/html-pages/Cooking-Tips.html
+++ b/html-pages/Cooking-Tips.html
@@ -7,6 +7,7 @@
     <Title> Learning Seafood Cuisine</Title>
 
     <link rel="stylesheet" href="../css-styles/header.css">
+    <link rel="stylesheet" href="../css-styles/cooking-tips.css">
 </head>
 
 <body>
@@ -27,15 +28,15 @@
         </div>
 
         <div class="HeaderPages" >
-            <a class="header-links" href="Breakfast-Dishes.html">Breakfast Dishes</a>
+            <a class="header-links" href="Seafood-Appetizers.html">Seafood Appetizers</a>
         </div>
 
         <div class="HeaderPages">
-            <a class="header-links" href="Lunch-Dishes.html">Lunch Dishes</a>
+            <a class="header-links" href="Seafood_Entree.html">Seafood Entree</a>
         </div>
 
         <div class="HeaderPages">
-            <a class="header-links" href="Desserts.html">Desserts</a>
+            <a class="header-links" href="Seafood-Sides.html">Seafood sides</a>
             </div>
 
         <div class="HeaderPages">
@@ -49,8 +50,49 @@
         </div>
     </div>
 
-    <h1> Cooking Tips </h1>
+    <h1 class="Page-heading"> Cooking Tips </h1>
 
+<div class= "CT-page">
+
+    <div>
+        <p class="Welcome-message"> <strong> We're excited that you've chosen to explore the wonderful world of seafood cuisine with us. Before you start cooking, we want to provide you with some helpful tips to ensure that your seafood dishes turn out delicious every time. </strong></p>
+    </div>
+
+    <div>
+        <img class="CT-IMGs" src="../icons/Ctips-icon.png">
+       </div>
+
+    <div> 
+
+        <p class="ct-heading">Tips for beginners:</p>
+        <ol class="tips">
+            <li class="li">Start with simple recipes: Begin with recipes that have fewer ingredients and are easier to make. You'll get comfortable with the basics before moving on to more complex recipes.</li>
+            <li class="li">Prepare all ingredients before cooking: Gather all the ingredients you need before you start cooking, and prepare them by chopping, peeling, and measuring them as required. This will help you stay organized and ensure that you don't forget any ingredients.</li>
+            <li> Always start with fresh seafood: The quality of your seafood is crucial to the success of your dish. Look for seafood that is firm, has a mild odor, and bright, shiny flesh.</li>
+            <li>Use the right tools: Invest in some basic kitchen tools such as a good quality knife, cutting board, pots, and pans. Having the right tools makes cooking easier and more enjoyable. </li>
+            <li> Follow the recipe: Read the recipe carefully and follow it step-by-step. Cooking is like science, so it's important to follow the recipe to achieve the desired result.</li>
+            <li>Don't be afraid to experiment: While it's important to follow the recipe, don't be afraid to add your own touch to it. Experiment with different ingredients and spices to make the dish your own.</li>
+            <li> Taste as you go: Taste your dish as you cook to ensure that it's turning out as you expected. Adjust the seasoning or other ingredients as required.</li>
+            <li>Clean as you go: Clean up as you cook to keep your kitchen organized and minimize the cleanup at the end. This also reduces the risk of cross-contamination and makes the cooking process more enjoyable.</li>
+            <li>Have fun: Cooking can be a lot of fun, so enjoy the process! Play some music, invite friends or family over to help, and have a good time.</li>
+          </ol>
+
+
+          <a class="more-tips" href="https://www.johnsoulesfoods.com/blog/cooking-tips-for-beginners/"> Click here for more cooking tips</a>
+
+        <ul Class="page-info">
+            <li>Email: Info@learningseafoodcuisine.com</li>
+            <li>Phone: 1 (758) 4565916</li>
+            <li>PO Box: 40602930 </li>
+            <li> Social Media: @LearningSeafoodCuisine on Instagram, Twitter, asnd facebook</li>
+          </ul>
+    </div>
+
+    
+
+        <button Class="previouspage-Button" > <a class="nextpage-text" href="learning-to-cook.html"> Previous Page</a> </button>
+        <button Class="nextpage-Button" > <a class="nextpage-text" href="Seafood-Appetizers.html"> Next Page</a> </button>
+</div>
 </body>
 
 </html>
