--- a/html-pages/Seafood-Sides.html
+++ b/html-pages/Seafood-Sides.html
@@ -7,6 +7,7 @@
     <Title> Learning Seafood Cuisine</Title>
 
     <link rel="stylesheet" href="../css-styles/header.css">
+    <link rel="stylesheet" href="../css-styles/recipepage.css">
 </head>
 
 <body>
@@ -27,15 +28,15 @@
         </div>
 
         <div class="HeaderPages" >
-            <a class="header-links" href="Breakfast-Dishes.html">Breakfast Dishes</a>
+            <a class="header-links" href="Seafood-Appetizers.html">Seafood Appetizers</a>
         </div>
 
         <div class="HeaderPages">
-            <a class="header-links" href="Lunch-Dishes.html">Lunch Dishes</a>
+            <a class="header-links" href="Seafood_Entree.html">Seafood Entree</a>
         </div>
 
         <div class="HeaderPages">
-            <a class="header-links" href="Desserts.html">Desserts</a>
+            <a class="header-links" href="Seafood-Sides.html">Seafood sides</a>
             </div>
 
         <div class="HeaderPages">
@@ -49,14 +50,24 @@
         </div>
     </div>
 
+    <h1> <h1 class="Page-heading"> Seafood Side Dishes </h1> </h1>
 
-    <h1> Lunch Dishes </h1>
+    <div id="side_recipies" class="all_recipies">
+        <div class="First-Row">
+            <div class="recipe">
 
-
-    <div id="en_recipies" class="entree">
-
+            </div>
+        </div>
     </div>
+
+<script src="../scripts/sides.js"></script>
+
+<div>
+    <button Class="previouspage-Button" > <a class="nextpage-text" href="Seafood_Entree.html"> Previous Page</a> </button>
+    <button Class="nextpage-Button" > <a class="nextpage-text" href="About-Us.html"> Next Page</a> </button>
+</div>
 
 </body>
 
 </html>
+
