--- a/html-pages/Seafood_Entree.html
+++ b/html-pages/Seafood_Entree.html
@@ -7,6 +7,8 @@
     <Title> Learning Seafood Cuisine</Title>
 
     <link rel="stylesheet" href="../css-styles/header.css">
+    <link rel="stylesheet" href="../css-styles/recipepage.css">
+
 </head>
 
 <body>
@@ -27,15 +29,15 @@
         </div>
 
         <div class="HeaderPages" >
-            <a class="header-links" href="Breakfast-Dishes.html">Breakfast Dishes</a>
+            <a class="header-links" href="Seafood-Appetizers.html">Seafood Appetizers</a>
         </div>
 
         <div class="HeaderPages">
-            <a class="header-links" href="Lunch-Dishes.html">Lunch Dishes</a>
+            <a class="header-links" href="Seafood_Entree.html">Seafood Entree</a>
         </div>
 
         <div class="HeaderPages">
-            <a class="header-links" href="Desserts.html">Desserts</a>
+            <a class="header-links" href="Seafood-Sides.html">Seafood sides</a>
             </div>
 
         <div class="HeaderPages">
@@ -49,7 +51,24 @@
         </div>
     </div>
 
-    <h1> Breakfast Dishes </h1>
+
+    <h1 class="Page-heading"> Seafood Entrees </h1>
+
+
+    <div id="entree_recipies" class="all_recipies">
+        <div class="First-Row">
+            <div class="recipe">
+
+            </div>
+        </div>
+    </div>
+
+<script src="../scripts/entree.js"></script>
+
+<div>
+    <button Class="previouspage-Button" > <a class="nextpage-text" href="Seafood-Appetizers.html"> Previous Page</a> </button>
+    <button Class="nextpage-Button" > <a class="nextpage-text" href="Seafood-Sides.html"> Next Page</a> </button>
+</div>
 
 </body>
 
