--- a/html-pages/Seafood-Appetizers.html
+++ b/html-pages/Seafood-Appetizers.html
@@ -28,7 +28,7 @@
         </div>
 
         <div class="HeaderPages" >
-            <a class="header-links" href="Seafood-Appetizers.html">Seafood Appetizers</a>
+            <a class="header-link-active" href="Seafood-Appetizers.html">Seafood Appetizers</a>
         </div>
 
         <div class="HeaderPages">
