--- a/html-pages/Seafood_Entree.html
+++ b/html-pages/Seafood_Entree.html
@@ -33,7 +33,7 @@
         </div>
 
         <div class="HeaderPages">
-            <a class="header-links" href="Seafood_Entree.html">Seafood Entree</a>
+            <a class="header-link-active" href="Seafood_Entree.html">Seafood Entree</a>
         </div>
 
         <div class="HeaderPages">
