--- a/html-pages/About-Us.html
+++ b/html-pages/About-Us.html
@@ -39,7 +39,7 @@
             </div>
             
         <div class="HeaderPages">
-                <a class="header-links" href="About-Us.html">About Us</a>
+                <a class="header-link-active" href="About-Us.html">About Us</a>
                 </div>
 
 
