--- a/html-pages/Seafood-Sides.html
+++ b/html-pages/Seafood-Sides.html
@@ -36,7 +36,7 @@
         </div>
 
         <div class="HeaderPages">
-            <a class="header-links" href="Seafood-Sides.html">Seafood sides</a>
+            <a class="header-link-active" href="Seafood-Sides.html">Seafood sides</a>
             </div>
 
         <div class="HeaderPages">
