--- a/html-pages/learning-to-cook.html
+++ b/html-pages/learning-to-cook.html
@@ -19,7 +19,9 @@
         <div class="Learning-Seafood-Cuisine"> <img class="logo" src="../icons/Logo.avif" > Learning Seafood Cuisine
           </div>
 
-        <div class="HeaderPages">Home Page</div>
+          <div class="HeaderPages">
+            <a class="header-link-active" href= "learning-to-cook.html">Home Page</a>
+        </div>
 
         <div  class="HeaderPages" >
             <a class="header-links" href="Cooking-Tips.html">Cooking Tips</a>
@@ -53,7 +55,7 @@
 
     <div class="HomePage"> 
         <div class= "welcomeM-box">
-            <p class="Welcome-message"> <strong> Welcome to Learning Seafood Cuisine! Here, you will find a wide variety of delicious seafood recipes that are easy to follow and perfect for any level of cooking experience. Our goal is to help you learn how to cook seafood like a pro, from the comfort of your own home. Here on Learning Seafood Cuisine, we have something for everyone. So, grab your apron and let&apos;s get to it! </strong></p>
+            <p class="Welcome-message"> Welcome to Learning Seafood Cuisine! Here, you will find a wide variety of delicious seafood recipes that are easy to follow and perfect for any level of cooking experience. Our goal is to help you learn how to cook seafood like a pro, from the comfort of your own home. Here on Learning Seafood Cuisine, we have something for everyone. So, grab your apron and let&apos;s get to it!</p>
         </div>
 
         <p Class="Popular-seafood"> Most Popular Seafood Recipes: </p>
@@ -61,7 +63,7 @@
             <div class="HP-Imagetext"><Strong><a class="header-links" href="Seafood-Appetizers.html">New England Clam Chowder</a></Strong>
                  <img class="HomePageIMGs" src="../Recipe Images/New England clam chowder.webp">
                 </div>
-            <div class="HP-Imagetext"><Strong><a class="header-links" href="Seafood-Sides.html">Mexican-Style SHrimp Cocktail</a></Strong>
+            <div class="HP-Imagetext"><Strong><a class="header-links" href="Seafood-Sides.html">Mexican-Style Shrimp Cocktail</a></Strong>
                 <img class="HomePageIMGs" src="../Recipe Images/Mexican-Style Shrimp Cocktail.webp">
             </div>
             <div class="HP-Imagetext"><Strong><a class="header-links" href="Seafood-Appetizers.html">Mussle Vinaigrette</a></Strong>
@@ -72,12 +74,12 @@
         <div>
             <p class="start-message"> We provide you with the essentials you need to take your seafood cuisine skills to the next level. Our step-by-step guides make it easy to follow along and learn at your own pace. With our help, you&apos;ll be whipping up delicious seafood dishes in no time. So join us on this culinary journey and click the next page button for great cooking tips from our highly trained chefs!</p>
 
-            <p class="info"> Contact Information
-                <ul>
+            <p class="info-H"> Contact Information
+                <ul Class="page-info">
                     <li>Email: Info@learningseafoodcuisine.com</li>
                     <li>Phone: 1 (758) 4565916</li>
                     <li>PO Box: 40602930 </li>
-                    <li> Social Media: @LearningSeafoodCuisine on Instagram, Twitter, asnd facebook</li>
+                    <li> Social Media: @LearningSeafoodCuisine on Instagram, Twitter, and facebook</li>
                   </ul>
             </p>
         </div>
