--- a/html-pages/test.html
+++ b/html-pages/test.html
@@ -1,4 +1,14 @@
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initail-scale=1.0">
+        <title>Search</title>
+    </head>
 
+
+<body>
 <link rel="stylesheet" href="../css-styles/test.css">
 
 <button Class="nextpage-Button" > <a href="Cooking-Tips.html"> next </a> </button>
@@ -12,3 +22,11 @@
         </div>
     </p>
 </div>
+
+<div class="search-box"> 
+    <input class= "search-bar" id="search" type="search" placeholder="Search">
+    <button class="search-button"> <img class="search-icon" src="../icons/search.jpg"> </button> 
+</div>
+</body>
+
+</html>
